--- a/src/toDoList.html
+++ b/src/toDoList.html
@@ -41,12 +41,7 @@
         </div>
     </nav>
 </header>
-<section id="toDo" class="d-flex m-auto">
-
-</section>
-<footer class="position-absolute">
-
-</footer>
+<section id="toDo" class="d-flex m-auto"></section>
 
 <script src="modules/toDoList/js.js"></script>
 <script src="js/toDoList.js"></script>
