My another works = > My website templates

--- a/src/toDoList.html
+++ b/src/toDoList.html
@@ -28,7 +28,7 @@
 				<a href="colors.html">Colors</a>
 			</span>
             <span>
-                My another works
+                My website templates
                 <span class="sub-item">
                     <span>
                         <a href="http://templatebino.zzz.com.ua/" target="_blank">Bino</a>
