--- a/src/index.html
+++ b/src/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>ToDo list</title>
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Test-task</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon">
 </head>
 <body>
 <header class="header d-flex">
-	<a href="https://school.peace-it.info/courses/" class="logo" target="_blank"></a>
-	<nav class="position-relative">
-		<input type="checkbox" name="nav" id="check-menu" class="d-none">
-		<label for="check-menu" class=" w-100 h-100 text-uppercase">menu</label>
-		<div class="burger-line first-line position-absolute"></div>
-		<div class="burger-line second-line position-absolute"></div>
-		<div class="burger-line third-line position-absolute"></div>
-		<div class="burger-line fourth-line position-absolute"></div>
-		<div class="menu text-uppercase d-flex justify-content-between align-content-center default-color">
+    <a href="https://school.peace-it.info/courses/" class="logo" target="_blank"></a>
+    <nav class="position-relative">
+        <input type="checkbox" name="nav" id="check-menu" class="d-none">
+        <label for="check-menu" class=" w-100 h-100 text-uppercase">menu</label>
+        <div class="burger-line first-line position-absolute"></div>
+        <div class="burger-line second-line position-absolute"></div>
+        <div class="burger-line third-line position-absolute"></div>
+        <div class="burger-line fourth-line position-absolute"></div>
+        <div class="menu text-uppercase d-flex justify-content-between align-content-center default-color">
 			<span>
 				<a href="toDoList.html">ToDo list</a>
 			</span>
-			<span>
+            <span>
 				<a href="elements.html">Elements form style</a>
 			</span>
-			<span>
+            <span>
 				<a href="colors.html">Colors</a>
 			</span>
-			<span>
+            <span>
 				My website templates
 				<span class="sub-item">
 					<span>
@@ -38,48 +38,287 @@
 					</span>
 				</span>
 			</span>
-		</div>
-	</nav>
+        </div>
+    </nav>
 </header>
 <main class="d-flex main">
-	<section>
-		<div>
-			<h3>Задание JS:</h3>
-			<p>
-				Сделать to do list
-				Стили делать не обязательно, обязателен функционал, можно использовать jQuery / React/Redux и прочие JS библиотеки/фреймворки или же без них.
-				Можно ввести имя задания в input, нажать кнопку "добавить" и в списке заданий появиться новое задание.
-				Задание можно отметить выполненным или удалить.
-			</p>
-		</div>
-		<div>
-			<h3>Задание CSS:</h3>
-			<span>1)Стилизовать элементы форм:</span>
-			<ul>
-				<li>- Чекбоксы</li>
-				<li>- Радиокнопки</li>
-				<li>- Текстовые поля</li>
-				<li>- Выпадающие списки</li>
-				<li>- Input с типом 'range'(Не обязательно)</li>
-			</ul>
-			(Можно использовать JS для стилизации, если таков требуется)
-			<p>
-				2)Responsive верхняя панель(header)
-				Верхнее горизонтальное меню для ПК, которое на мобильных и планшетах становится вертикальным.
-				Контент не имеет значения, суть работы заключается в верстке отзывчивого меню, реагирующего на различные размеры экрана
-				можно использовать js/jquery/bootstrap/media/css
-			</p>
-		</div>
-		<div>
-			<h3>Сделать класс для работы с цветами</h3>
-			<p>
-				Класс должен уметь:
-				1)Функция, которая принимает 2 цвета - возвращает средний цвет
-				2)Функция, которая принимает цвет в формате RGB - возвращает в формате HEX
-				3)Функция, которая принимает цвет в формате HEX - возвращает в формате RGB
-			</p>
-		</div>
-	</section>
+    <section class="english">
+        Ижиков Антон Иванович
+        <span>My grandmother started work … 1960.</span>
+        <ul>
+            <li>
+                <mark>in</mark>
+            </li>
+            <li>by</li>
+            <li>on</li>
+            <li>at</li>
+        </ul>
+        <span>She … like football.</span>
+        <ul>
+
+            <li>don’t</li>
+            <li>not</li>
+            <li>
+                <mark>doesn’t</mark>
+            </li>
+            <li>no</li>
+        </ul>
+        <span>She likes living in Spain, …?</span>
+        <ul>
+
+            <li>
+                <mark>doesn’t she?</mark>
+            </li>
+            <li>is she?</li>
+            <li>isn’t she?</li>
+            <li>do she?</li>
+        </ul>
+        <span> … three sisters.</span>
+        <ul>
+
+            <li>she is</li>
+            <li>she gets</li>
+            <li>she have</li>
+            <li>
+                <mark>she has got</mark>
+            </li>
+        </ul>
+        <span>There isn’t … milk in the fridge.</span>
+        <ul>
+
+            <li>many</li>
+            <li>
+                <mark>much</mark>
+            </li>
+            <li>a</li>
+            <li>a lot of</li>
+        </ul>
+        <span>I’m looking … Mr. Bean’s office.</span>
+        <ul>
+
+            <li>at</li>
+            <li>forward</li>
+            <li>
+                <mark>for</mark>
+            </li>
+            <li>to</li>
+        </ul>
+        <span>Where is your phone? – I … it last week.</span>
+        <ul>
+
+            <li>loose</li>
+            <li>have lost</li>
+            <li>losted</li>
+            <li>
+                <mark>lost</mark>
+            </li>
+        </ul>
+        <span>Какое число написано неверно?</span>
+        <ul>
+
+            <li>
+                <mark>forteen</mark>
+            </li>
+            <li>forty-four</li>
+            <li>four</li>
+        </ul>
+        <span>
+                Какой из следующих модальных глаголов с отрицательной частицей не имеет сокращенной
+                    формы?
+            </span>
+        <ul>
+
+            <li>cannot</li>
+            <li>
+                <mark>may not</mark>
+            </li>
+            <li>need not</li>
+        </ul>
+        <span>Какой из представленных вариантов является правильным ответом на фразу I like tennis?</span>
+        <ul>
+
+            <li>I am also.</li>
+            <li>
+                <mark>so do I.</mark>
+            </li>
+            <li>so like I.</li>
+        </ul>
+        <span>Какой вариант неверен?</span>
+        <ul>
+
+            <li>
+                <mark>A English book</mark>
+            </li>
+            <li>a good book</li>
+            <li>a useful book</li>
+        </ul>
+        <span>Какое предложение правильное?</span>
+        <ul>
+
+            <li>I have been to the cinema yesterday.</li>
+            <li>
+                <mark>I was at the cinema yesterday.</mark>
+            </li>
+            <li>I was been at the cinema yesterday.</li>
+        </ul>
+        <span>Какое предложение правильное?</span>
+        <ul>
+
+            <li>
+                <mark>He went to school yesterday.</mark>
+            </li>
+            <li>He went yesterday to school.</li>
+            <li>Yesterday he has gone to school.</li>
+        </ul>
+        <span>Какой вариант неверен?</span>
+        <ul>
+
+            <li>
+                <mark>Charles' book</mark>
+            </li>
+            <li>Peter's book</li>
+            <li>the boys' room</li>
+        </ul>
+        <span>Какое предложение правильное?</span>
+        <ul>
+
+            <li>I didn't get some apples.</li>
+            <li>I haven't got any time.</li>
+            <li>There's any milk in the fridge.</li>
+        </ul>
+        <span>I haven't got ……</span>
+        <ul>
+
+            <li>no brothers or sisters</li>
+            <li>brothers or sisters</li>
+            <li>
+                <mark>any brothers or sisters</mark>
+            </li>
+            <li>some brothers and sisters</li>
+        </ul>
+        <span>---</span>
+        <ul>
+
+            <li>Always he arrives at 2:30</li>
+            <li>He arrives at always 2:30</li>
+            <li>
+                <mark>He always arrives at 2:30</mark>
+            </li>
+            <li>He always at 2:30 arrives</li>
+        </ul>
+        <span>---</span>
+        <ul>
+
+            <li>Where playing Real Madrid?</li>
+            <li>Where is playing Real Madrid?</li>
+            <li>
+                <mark>Where is Real Madrid playing?</mark>
+            </li>
+            <li>Where playing is Real Madrid?</li>
+        </ul>
+        <span>I have Flamenco classes ……</span>
+        <ul>
+
+            <li>
+                <mark>on Saturday afternoons</mark>
+            </li>
+            <li>in Saturday afternoons</li>
+            <li>at Saturday afternoons</li>
+            <li>by Saturday afternoons</li>
+        </ul>
+        <span>She …….. Supper with us last Friday</span>
+        <ul>
+
+            <li>hadn’t</li>
+            <li>no had</li>
+            <li>didn’t have got</li>
+            <li>
+                <mark>didn’t have</mark>
+            </li>
+        </ul>
+        <span>Every year he goes to the coast for his holidays ....</span>
+        <ul>
+
+            <li>in train</li>
+            <li>on train</li>
+            <li>
+                <mark>by train</mark>
+            </li>
+            <li>with train</li>
+        </ul>
+        <span>---</span>
+        <ul>
+
+            <li>Taking train what you are?</li>
+            <li>What train taking are you?</li>
+            <li>Are you what train taking?</li>
+            <li>
+                <mark>What train are you taking?</mark>
+            </li>
+        </ul>
+        <span>I haven’t got …..</span>
+        <ul>
+
+            <li>no money.</li>
+            <li>money.</li>
+            <li>
+                <mark>any money.</mark>
+            </li>
+            <li>some money.</li>
+        </ul>
+        <span>..... orange juice in the fridge.</span>
+        <ul>
+
+            <li>There isn’t no</li>
+            <li>There is any</li>
+            <li>
+                <mark>There isn’t any</mark>
+            </li>
+            <li>There aren’t no</li>
+        </ul>
+    </section>
+    <aside class="task">
+        <div>
+            <h3>Задание JS:</h3>
+            <p>
+                Сделать to do list
+                Стили делать не обязательно, обязателен функционал, можно использовать jQuery / React/Redux и прочие JS
+                библиотеки/фреймворки или же без них.
+                Можно ввести имя задания в input, нажать кнопку "добавить" и в списке заданий появиться новое задание.
+                Задание можно отметить выполненным или удалить.
+            </p>
+        </div>
+        <div>
+            <h3>Задание CSS:</h3>
+            <span>1)Стилизовать элементы форм:</span>
+            <ul>
+                <li>- Чекбоксы</li>
+                <li>- Радиокнопки</li>
+                <li>- Текстовые поля</li>
+                <li>- Выпадающие списки</li>
+                <li>- Input с типом 'range'(Не обязательно)</li>
+            </ul>
+            <span>(Можно использовать JS для стилизации, если таков требуется)</span>
+            <p>
+                <span>2)Responsive верхняя панель(header)</span>
+                Верхнее горизонтальное меню для ПК, которое на мобильных и планшетах становится вертикальным.
+                Контент не имеет значения, суть работы заключается в верстке отзывчивого меню, реагирующего на различные
+                размеры экрана
+                можно использовать js/jquery/bootstrap
+                <wbr>
+                /media/css
+            </p>
+        </div>
+        <div>
+            <h3>Сделать класс для работы с цветами</h3>
+            <p>
+                <span>Класс должен уметь:</span>
+                1)Функция, которая принимает 2 цвета - возвращает средний цвет
+                2)Функция, которая принимает цвет в формате RGB - возвращает в формате HEX
+                3)Функция, которая принимает цвет в формате HEX - возвращает в формате RGB
+            </p>
+        </div>
+    </aside>
 </main>
 </body>
 </html>
