last commit) (i hope)

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
         </div>
     </nav>
 </header>
-<main class="d-flex main">
+<main class="main">
     <section class="english">
         Ижиков Антон Иванович
         <span>My grandmother started work … 1960.</span>
@@ -123,9 +123,9 @@
             <li>four</li>
         </ul>
         <span>
-                Какой из следующих модальных глаголов с отрицательной частицей не имеет сокращенной
-                    формы?
-            </span>
+            Какой из следующих модальных глаголов с отрицательной частицей не имеет сокращенной
+                формы?
+        </span>
         <ul>
 
             <li>cannot</li>
@@ -320,5 +320,6 @@
         </div>
     </aside>
 </main>
+
 </body>
 </html>
