--- a/src/elements.html
+++ b/src/elements.html
@@ -62,8 +62,6 @@
                 </label>
             </div>
             <div class="another-example">
-                <a href="https://daisy000webhost.000webhostapp.com/#eighth-sector" target="_blank"> => Checkbox in
-                    template site</a>
             </div>
         </div>
     </div>
@@ -77,18 +75,18 @@
                     <input type="radio" name="btn" checked>
                     <div></div>
                 </label>
-
                 <label>
                     <input type="radio" name="btn">
                     <div></div>
                 </label>
-
                 <label>
                     <input type="radio" name="btn">
                     <div></div>
                 </label>
             </div>
             <div class="another-example">
+                <a href="https://daisy000webhost.000webhostapp.com/#eighth-sector" target="_blank"> => Radio in
+                    template site</a>
                 <nav class="tabs d-flex">
                     <input class="d-none" id="rd1" type="radio" name="btn"/>
                     <label class="c-white text-center p-default pointer" for="rd1">Radio 1</label>
