--- a/src/colors.html
+++ b/src/colors.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ToDo list</title>
+    <title>Colors</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon">
 </head>
